[package]
name = "spongemock"
description = """
Util for creating mOcKinG sPoNgeBoB text from normal text.
"""
version = "0.1.0"
authors = ["Peter Thompson <peter.thompson@dunelm.org.uk"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"