[package]
name = "spongemock"
description = """
Util for creating mOcKinG sPoNgeBoB text from normal text.
"""
version = "0.1.0"
authors = ["Peter Thompson <peter.thompson@dunelm.org.uk"]
repository = "https://github.com/petert82/spongemock/"
license-file = "LICENSE"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"